[package]
name = "flql"
version = "0.2.2"
edition = "2021"
authors = ["Mohammad Julfikar <julfikar@eztech.com.my>", "Mohammad Julfikar <md.julfikar.mahmud@gmail.com>"]
categories = ["parser-implementations"]
description = "Query parser for flinch in-memory database"
exclude = [
    ".idea",
    ".github"
]
keywords = ["flql","flinch","dql","parser"]
license = "Apache-2.0"
repository = "https://github.com/mjm918/flinch-flql"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anydate = "0.3.0"
anyhow = "1.0.69"
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.1.4", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
thiserror = "1.0.38"
pest = "2.5.7"
pest_derive = "2.5.7"